# servant

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  core.rs  main.rs  parse.rs
src/core/: bench.rs  emoji_search.rs  languages.rs  mod.rs  nyancat.rs  save.rs  timer.rs  tracker.rs
src/core/access_tracker/: history.rs  mod.rs  track.rs
src/utils/: graph.rs  ip_blacklist.rs  languages.rs  mod.rs  packages.rs  print.rs
