[package]
name = "yuto51942-servant"
version = "1.0.5"
edition = "2021"
authors = ["Yuto Watanabe <yuto.w51942@gmail.com>"]
license = "MIT"
repository = "https://github.com/yuto51942/servant"
description = "Utilities cli."
readme = "README.md"
exclude = [
    ".github/*",
]
include = [
    "**/*.rs",
    "Cargo.toml",
]
[[bin]]
name = "sv"
path = "src/main.rs"

[dependencies]
structopt = "0.3.23"
termion = "1.1.1"
csv = "1.1.6"
chrono = "0.4.19"
whois = "0.1.0"
rustc-serialize = "0.3.24"
# TODO: If emoji_seacher is updated, please change the import source from github to crate.io.
# current repository: https://github.com/sphaerophoria/emoji_searcher.
# and crates.io: https://crates.io/crates/emoji_searcher
emoji_searcher_temp = {git = "https://github.com/cateiru/emoji_searcher", branch = "master", version="0.1.1"}
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
