[package]
name = "yuto51942-servant"
version = "1.0.11"
edition = "2021"
authors = ["Yuto Watanabe <yuto.w51942@gmail.com>"]
license = "MIT"
repository = "https://github.com/yuto51942/servant"
description = "Utilities cli."
readme = "README.md"
exclude = [
    ".github/*",
]
include = [
    "**/*.rs",
    "Cargo.toml",
]
[[bin]]
name = "sv"
path = "src/main.rs"

[dependencies]
structopt = "0.3.23"
termion = "1.1.1"
csv = "1.1.6"
chrono = "0.4.19"
whois = "0.1.0"
rustc-serialize = "0.3.24"
emojis = "0.1.2"
tui = "0.16.0"
chrono-tz = "0.6.0"
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
